Création du CRUD sur les codes promo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         {% endblock %}
     </head>
     <body>
-        <main class="container">
+        <main>
             {% block body %}{% endblock %}
         </main>
     </body>
