--- a/templates/code/index.html.twig
+++ b/templates/code/index.html.twig
@@ -26,8 +26,8 @@
                     <td class="px-3 py-2 whitespace-nowrap">{{ code.name }}</td>
                     <td class="px-3 py-2 whitespace-nowrap">{{ code.discount }}</td>
                     <td class="px-3 py-2 whitespace-nowrap">{{ code.domainName }}</td>
-                    <td class="px-3 py-2 whitespace-nowrap">{{ code.validFrom ? code.validFrom|date('Y-m-d à H:i:s') : '' }}</td>
-                    <td class="px-3 py-2 whitespace-nowrap">{{ code.validUntil ? code.validUntil|date('Y-m-d à H:i:s') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-nowrap">{{ code.validFrom ? code.validFrom|date('Y-m-d') : '' }}</td>
+                    <td class="px-3 py-2 whitespace-nowrap">{{ code.validUntil ? code.validUntil|date('Y-m-d') : '' }}</td>
                     <td class="px-3 py-2 whitespace-nowrap flex justify-center gap-2 p-2">
                         <a href="{{ path('app_code_edit', {'id': code.id}) }}" class="rounded-md bg-teal-600 p-1 font-medium text-white shadow-sm transition-colors hover:bg-teal-800">Modifier</a>
                         {{ include('code/_delete_form.html.twig') }}
