--- a/templates/code/edit.html.twig
+++ b/templates/code/edit.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Modifier un code promo</h1>
 
-    {{ include('code/_form.html.twig') }}
+    <p class="mt-3 ms-3">
+        <a href="{{ path('app_dashboard') }}" class="px-4 py-2 text-blue-600 text-sm font-medium rounded-md hover:text-blue-700 hover:underline focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">< Voir mes codes promo</a>
+    </p>
 
-    <a href="{{ path('app_code_index') }}">Revenir à la liste des codes promo</a>
+    {{ include('code/_form.html.twig') }}
 {% endblock %}
