--- a/templates/code/new.html.twig
+++ b/templates/code/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="text-4xl font-bold text-gray-900 sm:text-5xl text-center">Créer un code promo</h1>
     <p class="mt-3 ms-3">
-        <a href="{{ path('app_code_index') }}" class="px-4 py-2 text-blue-600 text-sm font-medium rounded-md hover:text-blue-700 hover:underline focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">< Revenir à la liste des codes promo</a>
+        <a href="{{ path('app_dashboard') }}" class="px-4 py-2 text-blue-600 text-sm font-medium rounded-md hover:text-blue-700 hover:underline focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">< Voir mes codes promo</a>
     </p>
 
     <div class="mt-6">
