--- a/templates/code/edit.html.twig
+++ b/templates/code/edit.html.twig
@@ -3,11 +3,18 @@
 {% block title %}Modifier un code promo{% endblock %}
 
 {% block body %}
-    <h1>Modifier un code promo</h1>
+    <section class="max-w-3xl mx-auto py-12 px-4 sm:px-6 lg:px-8 min-h-[calc(100vh-80px)]">
+        <div class="w-full bg-white p-8 rounded-lg shadow-md">
+            <h1 class="text-3xl font-bold text-gray-900 mb-6 text-center">Modifier un code promo</h1>
 
-    <p class="mt-3 ms-3">
-        <a href="{{ path('app_dashboard') }}" class="px-4 py-2 text-blue-600 text-sm font-medium rounded-md hover:text-blue-700 hover:underline focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">< Voir mes codes promo</a>
-    </p>
+            <p class="mt-3 mb-6 text-center">
+                <a href="{{ path('app_dashboard') }}" class="px-4 py-2 text-teal-600 text-sm font-medium rounded-md hover:text-teal-800 hover:underline focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+                    < Retour à mes codes promo
+                </a>
+            </p>
 
-    {{ include('code/_form.html.twig') }}
+            {{ include('code/_form.html.twig') }}
+        </div>
+    </section>
 {% endblock %}
+
